--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,13 @@
 
     "short_name": "Synagogue",
 
-    "start_url": "index.html",
+    "start_url": "https://coursdetorah.tk/",
 
     "display": "standalone",
 
     "background_color": "#05055a",
-
+  "scope": "/",
+  "theme_color": "#3367D6"
     "description": "cours de torah",
 
     "icons": [{
@@ -62,8 +63,7 @@
 
       "type": "image/png"
 
-    }],
-
+    }], 
     "related_applications": [{
 
       "platform": "play",
